prometheus_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: monitoring
spec:
  ingressClassName: public
  tls:
  - hosts:
      - "grafana.jackdevries.com"
  rules:
  - host: "grafana.jackdevries.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
